<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsfwLabel">

        <RadioButton
            android:id="@+id/rbSafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOption"
            android:text="@string/safe" />

        <RadioButton
            android:id="@+id/rbErotic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOption"
            android:text="@string/erotic" />

        <RadioButton
            android:id="@+id/rbExplicit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onOption"
            android:text="@string/explicit" />
    </RadioGroup>

    <TextView
        android:id="@+id/nsfwLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nsfw_limit"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbBothSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOption"
        android:text="@string/both_sides_limited"
        app:layout_constraintStart_toStartOf="@+id/bNext"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <Button
        android:id="@+id/bNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:onClick="onRoll"
        android:text="@string/next_case"
        app:layout_constraintEnd_toStartOf="@+id/bReselect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/cbNoRepeat" />

    <Button
        android:id="@+id/bReselect"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:onClick="onReselect"
        android:text="@string/reselect"
        app:layout_constraintBaseline_toBaselineOf="@+id/bNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bNext" />

    <TextView
        android:id="@+id/caseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/iImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/case_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caseText" />

    <CheckBox
        android:id="@+id/cbNoRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onOption"
        android:text="@string/avoid_repeat_character"
        app:layout_constraintStart_toStartOf="@+id/cbBothSide"
        app:layout_constraintTop_toBottomOf="@+id/cbBothSide" />
</androidx.constraintlayout.widget.ConstraintLayout>